# sermatec-ess

./: Cargo.toml  Proxmox.md  README.md  sermatec.service
protocol/: alarm.properties  alarm_en.properties  cn2en.csv  cn2en.sh  protocol-en.json  protocol.json  upgrade.json
src/: main.rs
src/daemon/: mod.rs
src/protocol/: command.rs  field.rs  fieldapp.rs  fieldtype.rs  hardware.rs  mod.rs  nom_helper.rs
