[package]
name = "sermatec-ess"
description = "Sermatec ESS CLI"
authors = ["Sebastien Bechet"]
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_with = { version = "^2.2", features = ["hex"] }
clap = { version = "^4.1", features = ["cargo", "derive"] }
hex = "^0.4"
nom = "^7.1"
rumqttc = "^0.20"
nix = "^0.26"
chrono = "^0.4"
