[package]
name = "sermatec-ess"
description = "Sermatec ESS CLI"
authors = ["Sebastien Bechet"]
version = "0.2.4"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/sermatec-ess"
repository = "https://github.com/sbechet/sermatec-ess"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_with = { version = "3.0", features = ["hex"] }
clap = { version = "^4.1", features = ["cargo", "derive"] }
hex = "^0.4"
nom = "^7.1"
rumqttc = "^0.21"
nix = "^0.26"
chrono = "^0.4"
